--- a/project.css
+++ b/project.css
@@ -306,3 +306,10 @@ margin: 26px auto;
     font-size: 17px;
     padding: 50px!important;
 }
+
+{
+    @media(max-width:998px){
+        html{
+            font-size:55%;
+        }
+    }
